# django-boilerplate

./: .gitignore  README.md  cookiecutter.json
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: main.yml
hooks/: post_gen_project.sh  pre_gen_project.sh
{{ cookiecutter.main_module }}/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements_dev.txt
{{ cookiecutter.main_module }}/.github/workflows/: main.yml
{{ cookiecutter.main_module }}/base/: abstract_models.py  aws_clients.py  managers.py  pagination.py  routers.py
{{ cookiecutter.main_module }}/payments/: choices.py  constants.py  factories.py  managers.py  models.py  urls.py  utils.py
{{ cookiecutter.main_module }}/payments/migrations/: 0001_initial.py
{{ cookiecutter.main_module }}/payments/tests/: test_services.py  test_views.py
{{ cookiecutter.main_module }}/scripts/: delete_user.py
{{ cookiecutter.main_module }}/settings/: common.py  development.py  production.py  testing.py
{{ cookiecutter.main_module }}/templates/email/: account_activation_email.tpl  password_reset_email.tpl
{{ cookiecutter.main_module }}/templates/pages/: about.html
{{ cookiecutter.main_module }}/users/: backends.py  choices.py  exceptions.py  managers.py  models.py  serializers.py  services.py  tokens.py  urls.py  validators.py  views.py
{{ cookiecutter.main_module }}/users/google/: api.py  creds.py  serializers.py  services.py  urls.py
{{ cookiecutter.main_module }}/users/migrations/: 0001_initial.py
{{ cookiecutter.main_module }}/users/tests/: test_models.py
{{ cookiecutter.main_module }}/users/tests/test_views/: test_login_api.py  test_logout_api.py  test_password_change_api.py  test_password_reset_api.py  test_register_api.py
{{ cookiecutter.main_module }}/{{ cookiecutter.main_module }}/: api_urls.py  celery.py  urls.py  views.py  wsgi.py
