[tool.poetry]
name = {{ cookiecutter.main_module }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_description }}
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
django-cors-headers = "^4.2.0"
django-debug-toolbar = "^4.2.0"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-sites = "^0.11"
django-filter = "^21.1"
python-dotenv = "^0.21"
django-versatileimagefield = "^3.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
virtualenv = "^20.24.5"
poetry = "^1.6.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.7"

pytz = "2022.7.1"
Pillow = "^9.2"
Werkzeug = "~2.2.2"
django-uuid-upload-path = "^1.0"

django-log-request-id = "^2.0"

# Auth Stuff
# -------------------------------------
PyJWT = "^2.4"
django-mail-templated = "^2.6"

# Static Files and Media Storage
# -------------------------------------
gunicorn = "~20.1.0"
django-storages = "^1.13"
boto3 = "~1.26.47"

# Caching
# -------------------------------------
django-redis = "^5.2"
hiredis = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
